correction flex wrap, add cart, add event on btn

--- a/styles.scss
+++ b/styles.scss
@@ -14,24 +14,29 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-size: 20px;
+  font-size: 16px;
   font-family: "Courier New", Courier, monospace;
 }
 h1 {
-  background-color: whitesmoke;
+  width: min-content;
   margin: auto;
-  width: 30%;
+  margin-top: 6px;
+  padding: 5px;
+  background-color: whitesmoke;
+  font-size: 3rem;
 }
 
 h2 {
-  background-color: whitesmoke;
   text-align: left;
   padding-left: 5px;
+  background-color: whitesmoke;
+  font-size: 2rem;
 }
 
 h3 {
   margin: 3px;
   padding: 0;
+  font-size: 1.2rem;
 }
 
 section {
@@ -39,42 +44,60 @@ section {
   flex-wrap: wrap;
   align-items: baseline;
   justify-content: space-around;
+  .card {
+    background-color: whitesmoke;
+    width: 300px;
+    height: 400px;
+    // min-width: 290px;
+    // max-width: 300px;
+    margin: 10px 0px;
+    padding: 10px 0px;
+    .idCard {
+      display: none;
+    }
+    .card_img {
+      height: 200px;
+      width: auto;
+    }
+    .card_resume {
+      margin: auto;
+      width: 95%;
+      text-align: center;
+    }
+    .card-btn-info {
+      color: whitesmoke;
+      background-color: black;
+      border: 1px solid black;
+      border-radius: 3px;
+      font-size: 1rem;
+      margin: 5px;
+      padding: 3px;
+    }
+    .card-btn-reserver {
+      color: whitesmoke;
+      background-color: black;
+      border: 1px solid black;
+      border-radius: 3px;
+      font-size: 1rem;
+      margin: 5px;
+      padding: 3px;
+    }
+  }
 }
 
-.card {
+div #myCart {
+  position: fixed;
+  top: 5px;
+  right: 5px;
+  display: flex;
+  width: min-content;
+  padding: 5px;
   background-color: whitesmoke;
-  width: 25vw;
-  min-width: 300px;
-  height: auto;
-  padding: 10px;
+  font-size: 2rem;
+  border: 2px solid black;
+  border-radius: 5px;
 }
 
-.card_img {
-  height: 200px;
-  width: auto;
-}
-
-.card_resume {
-  margin: auto;
-  width: 95%;
-  text-align: center;
-}
-.card-btn-info {
-  color: whitesmoke;
-  background-color: black;
-  border: 1px solid black;
-  border-radius: 3px;
-  font-size: 20px;
-  margin: 5px;
-  padding: 3px;
-}
-
-.card-btn-reserver {
-  color: whitesmoke;
-  background-color: black;
-  border: 1px solid black;
-  border-radius: 3px;
-  font-size: 20px;
-  margin: 5px;
-  padding: 3px;
+.fa-cart-plus {
+  margin: 2px;
 }
