--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -9,6 +9,7 @@ body {
 }
 body {
   background-image: url(./static/images/bookshelf.jpg);
+  background-color: black;
   background-size: 100% 100%;
   background-repeat: no-repeat;
   font-family: "Courier New", Courier, monospace;
